fix overflow

--- a/public/assets/styles/content.css
+++ b/public/assets/styles/content.css
@@ -88,8 +88,7 @@ input {
 
 #messages {
   max-height: 50%;
-  overflow: scroll;
-
+  overflow-y: scroll;
 }
 .message {
   margin: 10px auto; 
